# voxel-raytracer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  README.md  raytracer_win.sln
Raytracer/: CMakeLists.txt  Raytracer.cpp  Raytracer.h  Renderer.cpp  Renderer.h  SVO.cpp  SVO.h  Scene.h  Shader.cpp  Shader.h  Terrain.h  Texture.h  VoxLoader.cpp  VoxLoader.h  Window.cpp  Window.h  ogt_vox.h
raytracer_win/: raytracer_win.vcxproj  raytracer_win.vcxproj.filters
shaders/: compute.glsl  fragment.glsl  vertex.glsl
vox/: monu3.vox
